--- a/toast/pyproject.toml
+++ b/toast/pyproject.toml
@@ -5,7 +5,9 @@ description = ""
 authors = ["Raini Wu <rainiwu01@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.7"
+python-pytun = "^2.4.1"
+zmq = "^0.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
