--- a/slicer/pyproject.toml
+++ b/slicer/pyproject.toml
@@ -7,6 +7,9 @@ authors = ["Raini Wu <rainiwu@ucsd.edu>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 butter = {path = "../butter"}
+torch = "^1.13.0"
+numpy = "^1.23.5"
+matplotlib = "^3.6.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
