--- a/butter/pyproject.toml
+++ b/butter/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 pyzmq = "^24.0.1"
+zmq = "^0.0.0"
 
 [tool.poetry.dev-dependencies]
 
